@@ -11,6 +11,8 @@ java {
     sourceCompatibility = '21'
 }
 
+ext['spring-security.version'] = '6.5.0'
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -25,7 +27,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -63,4 +64,5 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs('-XX:+EnableDynamicAgentLoading')
 }
